Feature: Create articles associated with category entity